src/objects/Joint_Business_Team__c.object
<CustomObject>
    <description>R5 Joint Business Team</description>
    <fields>
        <fullName>Access__c</fullName>
        <description>R5 Access</description>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - BU formula field copied from User.</description>
        <formula>LEFT(TEXT(User__r.Business_Unit_BU__c), 4)</formula>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Business_Plan_OwnerID__c</fullName>
        <formula>CASESAFEID( Joint_Business_Plan__r.OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Business Plan OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 - Copies Country from User</description>
        <formula>User__r.Country</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 - DIV formula field from User.</description>
        <formula>TEXT(User__r.Division_DIV__c)</formula>
        <label>DIV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>It Is created for X-Author Document</description>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 Joint Business Plan</description>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Plan Teams</relationshipLabel>
        <relationshipName>Joint_Business_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>It Is created for X-Author Document</description>
        <formula>User__r.FirstName+&quot; &quot;+ User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>It Is created for X-Author Document</description>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>R5 Team Role</description>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Joint_Business_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Partner Business Plan Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JBP-TEAMROLE-{0000}</displayFormat>
        <label>Business Plan Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Business Plan Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Channel Partner Business Team</description>
        <errorConditionFormula>OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;),
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;)
)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed/Obsolete</errorMessage>
    </validationRules>
</CustomObject>